Remove more Polkadot remnants, additional config updates for Based, update Wiki and Github links, force Dark theme but reintroduce theme picker, update CSS

--- a/packages/apps/public/index.html
+++ b/packages/apps/public/index.html
@@ -123,16 +123,17 @@
         filter: blur(2px);
         opacity: 0.15;
       }
-/*
-      h1, .ui--Button.isBasic:not(.isDisabled):not(.isIcon):not(.isSelected) .ui--Icon {
-        color: rgba(0, 255, 255, 1.0) !important;
-      }
 
       .ui--Button.isBasic:not(.isDisabled):not(.isIcon):not(.isSelected):not(.isReadOnly) {
           box-shadow: 0 0 1px rgba(0, 255, 255, 1.0) !important;
           border: 1px rgba(0, 255, 255, 1.0) inset;
       }
 
+      .ui--Button.isBasic:not(.isDisabled):not(.isIcon):not(.isSelected) .ui--Icon {
+        color: rgba(0, 255, 255, 1.0) !important;
+      }
+
+/*  
       img.ui--Dropdown-icon.ui--ChainImg.highlight--bg {
         background: rgba(0, 255, 255, 1.0) !important;
         border: black 1px solid;
